CompiTPE/bin/compiTPE/y.output
   0  $accept : programa $end

   1  programa : ID bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';'
   2           | error ';'

   3  bloque_sentencias_declarativas : sentencia_declarativa
   4                                 | bloque_sentencias_declarativas sentencia_declarativa

   5  sentencia_declarativa : declaracionDatos
   6                        | declaracionNuevoTipo
   7                        | declaracionFuncion

   8  declaracionDatos : tipo conjunto_declaracion_variables ';'
   9                   | ID conjunto_declaracion_variables ';'
  10                   | tipo conjunto_declaracion_variables

  11  conjunto_declaracion_variables : conjunto_declaracion_variables ',' ID
  12                                 | ID

  13  declaracionNuevoTipo : TYPEDEF ID '=' encabezado_funcion_typedef ';'

  14  encabezado_funcion_typedef : tipo FUNC '(' tipo ')'

  15  declaracionFuncion : tipo FUNC ID parametro bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'
  16                     | tipo FUNC ID parametro bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'

  17  pre_condicion : PRE ':' '(' condicion ')' ',' CADENA ';'
  18                | PRE ':' condicion ')' ',' CADENA ';'
  19                | PRE ':' '(' ')' ',' CADENA ';'
  20                | PRE ':' '(' condicion ',' CADENA ';'
  21                | PRE ':' '(' condicion ')' CADENA ';'
  22                | PRE ':' '(' condicion ')' ',' ';'

  23  parametro : '(' tipo ID ')'
  24            | tipo ID ')'
  25            | '(' ID ')'
  26            | '(' tipo ')'
  27            | '(' ')'
  28            | '(' tipo ID

  29  retorno : '(' expresion ')'
  30          | expresion ')'
  31          | '(' ')'
  32          | '(' expresion

  33  bloque_sentencias_ejecutables : sentencia_ejecutable
  34                                | BEGIN conjunto_sentencia_ejecutable END ';'
  35                                | error ';'

  36  conjunto_sentencia_ejecutable : sentencia_ejecutable
  37                                | conjunto_sentencia_ejecutable sentencia_ejecutable

  38  sentencia_ejecutable : asignacion
  39                       | mensaje_pantalla
  40                       | clausula_seleccion_if
  41                       | sentencia_control_repeat

  42  invocacion_funcion : ID '(' factor ')' ';'

  43  asignacion : ID ":=" expresioncompuesta ';'
  44             | ID expresioncompuesta ';'
  45             | ID ":=" ';'

  46  expresioncompuesta : '(' expresion ')'
  47                     | expresion
  48                     | expresion ')'
  49                     | '(' expresion

  50  expresion : expresion '+' termino
  51            | expresion '-' termino
  52            | termino

  53  termino : termino '/' factor
  54          | termino '*' factor
  55          | factor
  56          | termino '/' invocacion_funcion
  57          | termino '*' invocacion_funcion
  58          | invocacion_funcion

  59  factor : ID
  60         | CTE
  61         | '-' CTE

  62  tipo : INT
  63       | SINGLE

  64  clausula_seleccion_if : IF '(' condicion ')' THEN bloque_sentencias_ejecutables ENDIF ';'
  65                        | IF condicion ')' THEN bloque_sentencias_ejecutables ENDIF ';'
  66                        | IF '(' condicion THEN bloque_sentencias_ejecutables ENDIF ';'
  67                        | IF '(' condicion ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'
  68                        | IF condicion ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'
  69                        | IF '(' condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'
  70                        | IF '(' condicion ')' bloque_sentencias_ejecutables ENDIF ';'
  71                        | IF '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'
  72                        | IF THEN bloque_sentencias_ejecutables ENDIF ';'
  73                        | IF THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'

  74  condicion : expresion
  75            | condicion operador_logico expresion

  76  operador_logico : "||"
  77                  | "&&"
  78                  | "<>"
  79                  | "=="
  80                  | "<="
  81                  | ">="
  82                  | '>'
  83                  | '<'

  84  mensaje_pantalla : PRINT '(' CADENA ')' ';'
  85                   | PRINT CADENA ')' ';'
  86                   | PRINT '(' CADENA ';'

  87  sentencia_control_repeat : REPEAT '(' ID '=' CTE ';' condicion_repeat ';' CTE ')' BEGIN conjunto_sentencias_repeat END ';'

  88  conjunto_sentencias_repeat : BREAK ';'
  89                             | sentencia_ejecutable
  90                             | sentencia_ejecutable conjunto_sentencias_repeat

  91  condicion_repeat : ID operador_logico ID
  92                   | ID operador_logico CTE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	programa  goto 3


state 1
	programa : error . ';'  (2)

	';'  shift 4
	.  error


state 2
	programa : ID . bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';'  (1)

	ID  shift 5
	INT  shift 6
	SINGLE  shift 7
	TYPEDEF  shift 8
	.  error

	bloque_sentencias_declarativas  goto 9
	sentencia_declarativa  goto 10
	declaracionDatos  goto 11
	declaracionNuevoTipo  goto 12
	declaracionFuncion  goto 13
	tipo  goto 14


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : error ';' .  (2)

	.  reduce 2


state 5
	declaracionDatos : ID . conjunto_declaracion_variables ';'  (9)

	ID  shift 15
	.  error

	conjunto_declaracion_variables  goto 16


state 6
	tipo : INT .  (62)

	.  reduce 62


state 7
	tipo : SINGLE .  (63)

	.  reduce 63


state 8
	declaracionNuevoTipo : TYPEDEF . ID '=' encabezado_funcion_typedef ';'  (13)

	ID  shift 17
	.  error


state 9
	programa : ID bloque_sentencias_declarativas . BEGIN conjunto_sentencia_ejecutable END ';'  (1)
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencia_declarativa  (4)

	ID  shift 5
	BEGIN  shift 18
	INT  shift 6
	SINGLE  shift 7
	TYPEDEF  shift 8
	.  error

	sentencia_declarativa  goto 19
	declaracionDatos  goto 11
	declaracionNuevoTipo  goto 12
	declaracionFuncion  goto 13
	tipo  goto 14


state 10
	bloque_sentencias_declarativas : sentencia_declarativa .  (3)

	.  reduce 3


state 11
	sentencia_declarativa : declaracionDatos .  (5)

	.  reduce 5


state 12
	sentencia_declarativa : declaracionNuevoTipo .  (6)

	.  reduce 6


state 13
	sentencia_declarativa : declaracionFuncion .  (7)

	.  reduce 7


state 14
	declaracionDatos : tipo . conjunto_declaracion_variables ';'  (8)
	declaracionDatos : tipo . conjunto_declaracion_variables  (10)
	declaracionFuncion : tipo . FUNC ID parametro bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (15)
	declaracionFuncion : tipo . FUNC ID parametro bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (16)

	ID  shift 15
	FUNC  shift 20
	.  error

	conjunto_declaracion_variables  goto 21


state 15
	conjunto_declaracion_variables : ID .  (12)

	.  reduce 12


state 16
	declaracionDatos : ID conjunto_declaracion_variables . ';'  (9)
	conjunto_declaracion_variables : conjunto_declaracion_variables . ',' ID  (11)

	';'  shift 22
	','  shift 23
	.  error


state 17
	declaracionNuevoTipo : TYPEDEF ID . '=' encabezado_funcion_typedef ';'  (13)

	'='  shift 24
	.  error


state 18
	programa : ID bloque_sentencias_declarativas BEGIN . conjunto_sentencia_ejecutable END ';'  (1)

	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	REPEAT  shift 28
	.  error

	conjunto_sentencia_ejecutable  goto 29
	sentencia_ejecutable  goto 30
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 19
	bloque_sentencias_declarativas : bloque_sentencias_declarativas sentencia_declarativa .  (4)

	.  reduce 4


state 20
	declaracionFuncion : tipo FUNC . ID parametro bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (15)
	declaracionFuncion : tipo FUNC . ID parametro bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (16)

	ID  shift 35
	.  error


state 21
	declaracionDatos : tipo conjunto_declaracion_variables . ';'  (8)
	declaracionDatos : tipo conjunto_declaracion_variables .  (10)
	conjunto_declaracion_variables : conjunto_declaracion_variables . ',' ID  (11)

	';'  shift 36
	','  shift 23
	ID  reduce 10
	BEGIN  reduce 10
	INT  reduce 10
	SINGLE  reduce 10
	TYPEDEF  reduce 10


state 22
	declaracionDatos : ID conjunto_declaracion_variables ';' .  (9)

	.  reduce 9


state 23
	conjunto_declaracion_variables : conjunto_declaracion_variables ',' . ID  (11)

	ID  shift 37
	.  error


state 24
	declaracionNuevoTipo : TYPEDEF ID '=' . encabezado_funcion_typedef ';'  (13)

	INT  shift 6
	SINGLE  shift 7
	.  error

	tipo  goto 38
	encabezado_funcion_typedef  goto 39


state 25
	asignacion : ID . ":=" expresioncompuesta ';'  (43)
	asignacion : ID . expresioncompuesta ';'  (44)
	asignacion : ID . ":=" ';'  (45)

	ID  shift 40
	CTE  shift 41
	":="  shift 42
	'('  shift 43
	'-'  shift 44
	.  error

	expresion  goto 45
	invocacion_funcion  goto 46
	factor  goto 47
	expresioncompuesta  goto 48
	termino  goto 49


state 26
	clausula_seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias_ejecutables ENDIF ';'  (64)
	clausula_seleccion_if : IF . condicion ')' THEN bloque_sentencias_ejecutables ENDIF ';'  (65)
	clausula_seleccion_if : IF . '(' condicion THEN bloque_sentencias_ejecutables ENDIF ';'  (66)
	clausula_seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (67)
	clausula_seleccion_if : IF . condicion ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (68)
	clausula_seleccion_if : IF . '(' condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (69)
	clausula_seleccion_if : IF . '(' condicion ')' bloque_sentencias_ejecutables ENDIF ';'  (70)
	clausula_seleccion_if : IF . '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (71)
	clausula_seleccion_if : IF . THEN bloque_sentencias_ejecutables ENDIF ';'  (72)
	clausula_seleccion_if : IF . THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (73)

	ID  shift 40
	CTE  shift 41
	THEN  shift 50
	'('  shift 51
	'-'  shift 44
	.  error

	condicion  goto 52
	expresion  goto 53
	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 49


state 27
	mensaje_pantalla : PRINT . '(' CADENA ')' ';'  (84)
	mensaje_pantalla : PRINT . CADENA ')' ';'  (85)
	mensaje_pantalla : PRINT . '(' CADENA ';'  (86)

	CADENA  shift 54
	'('  shift 55
	.  error


state 28
	sentencia_control_repeat : REPEAT . '(' ID '=' CTE ';' condicion_repeat ';' CTE ')' BEGIN conjunto_sentencias_repeat END ';'  (87)

	'('  shift 56
	.  error


state 29
	programa : ID bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable . END ';'  (1)
	conjunto_sentencia_ejecutable : conjunto_sentencia_ejecutable . sentencia_ejecutable  (37)

	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	END  shift 57
	REPEAT  shift 28
	.  error

	sentencia_ejecutable  goto 58
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 30
	conjunto_sentencia_ejecutable : sentencia_ejecutable .  (36)

	.  reduce 36


state 31
	sentencia_ejecutable : asignacion .  (38)

	.  reduce 38


state 32
	sentencia_ejecutable : mensaje_pantalla .  (39)

	.  reduce 39


state 33
	sentencia_ejecutable : clausula_seleccion_if .  (40)

	.  reduce 40


state 34
	sentencia_ejecutable : sentencia_control_repeat .  (41)

	.  reduce 41


state 35
	declaracionFuncion : tipo FUNC ID . parametro bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (15)
	declaracionFuncion : tipo FUNC ID . parametro bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (16)

	INT  shift 6
	SINGLE  shift 7
	'('  shift 59
	.  error

	tipo  goto 60
	parametro  goto 61


state 36
	declaracionDatos : tipo conjunto_declaracion_variables ';' .  (8)

	.  reduce 8


state 37
	conjunto_declaracion_variables : conjunto_declaracion_variables ',' ID .  (11)

	.  reduce 11


state 38
	encabezado_funcion_typedef : tipo . FUNC '(' tipo ')'  (14)

	FUNC  shift 62
	.  error


state 39
	declaracionNuevoTipo : TYPEDEF ID '=' encabezado_funcion_typedef . ';'  (13)

	';'  shift 63
	.  error


state 40
	invocacion_funcion : ID . '(' factor ')' ';'  (42)
	factor : ID .  (59)

	'('  shift 64
	THEN  reduce 59
	"||"  reduce 59
	"&&"  reduce 59
	"<>"  reduce 59
	"=="  reduce 59
	"<="  reduce 59
	">="  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	';'  reduce 59
	','  reduce 59
	')'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'/'  reduce 59
	'*'  reduce 59


state 41
	factor : CTE .  (60)

	.  reduce 60


state 42
	asignacion : ID ":=" . expresioncompuesta ';'  (43)
	asignacion : ID ":=" . ';'  (45)

	ID  shift 40
	CTE  shift 41
	';'  shift 65
	'('  shift 43
	'-'  shift 44
	.  error

	expresion  goto 45
	invocacion_funcion  goto 46
	factor  goto 47
	expresioncompuesta  goto 66
	termino  goto 49


state 43
	expresioncompuesta : '(' . expresion ')'  (46)
	expresioncompuesta : '(' . expresion  (49)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	expresion  goto 67
	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 49


state 44
	factor : '-' . CTE  (61)

	CTE  shift 68
	.  error


state 45
	expresioncompuesta : expresion .  (47)
	expresioncompuesta : expresion . ')'  (48)
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)

	')'  shift 69
	'+'  shift 70
	'-'  shift 71
	';'  reduce 47


state 46
	termino : invocacion_funcion .  (58)

	.  reduce 58


state 47
	termino : factor .  (55)

	.  reduce 55


state 48
	asignacion : ID expresioncompuesta . ';'  (44)

	';'  shift 72
	.  error


state 49
	expresion : termino .  (52)
	termino : termino . '/' factor  (53)
	termino : termino . '*' factor  (54)
	termino : termino . '/' invocacion_funcion  (56)
	termino : termino . '*' invocacion_funcion  (57)

	'/'  shift 73
	'*'  shift 74
	THEN  reduce 52
	"||"  reduce 52
	"&&"  reduce 52
	"<>"  reduce 52
	"=="  reduce 52
	"<="  reduce 52
	">="  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	';'  reduce 52
	','  reduce 52
	')'  reduce 52
	'+'  reduce 52
	'-'  reduce 52


state 50
	clausula_seleccion_if : IF THEN . bloque_sentencias_ejecutables ENDIF ';'  (72)
	clausula_seleccion_if : IF THEN . bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (73)

	error  shift 75
	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	BEGIN  shift 76
	REPEAT  shift 28
	.  error

	bloque_sentencias_ejecutables  goto 77
	sentencia_ejecutable  goto 78
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 51
	clausula_seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias_ejecutables ENDIF ';'  (64)
	clausula_seleccion_if : IF '(' . condicion THEN bloque_sentencias_ejecutables ENDIF ';'  (66)
	clausula_seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (67)
	clausula_seleccion_if : IF '(' . condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (69)
	clausula_seleccion_if : IF '(' . condicion ')' bloque_sentencias_ejecutables ENDIF ';'  (70)
	clausula_seleccion_if : IF '(' . condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (71)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	condicion  goto 79
	expresion  goto 53
	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 49


state 52
	clausula_seleccion_if : IF condicion . ')' THEN bloque_sentencias_ejecutables ENDIF ';'  (65)
	clausula_seleccion_if : IF condicion . ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (68)
	condicion : condicion . operador_logico expresion  (75)

	"||"  shift 80
	"&&"  shift 81
	"<>"  shift 82
	"=="  shift 83
	"<="  shift 84
	">="  shift 85
	'>'  shift 86
	'<'  shift 87
	')'  shift 88
	.  error

	operador_logico  goto 89


state 53
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)
	condicion : expresion .  (74)

	'+'  shift 70
	'-'  shift 71
	THEN  reduce 74
	"||"  reduce 74
	"&&"  reduce 74
	"<>"  reduce 74
	"=="  reduce 74
	"<="  reduce 74
	">="  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	','  reduce 74
	')'  reduce 74


state 54
	mensaje_pantalla : PRINT CADENA . ')' ';'  (85)

	')'  shift 90
	.  error


state 55
	mensaje_pantalla : PRINT '(' . CADENA ')' ';'  (84)
	mensaje_pantalla : PRINT '(' . CADENA ';'  (86)

	CADENA  shift 91
	.  error


state 56
	sentencia_control_repeat : REPEAT '(' . ID '=' CTE ';' condicion_repeat ';' CTE ')' BEGIN conjunto_sentencias_repeat END ';'  (87)

	ID  shift 92
	.  error


state 57
	programa : ID bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END . ';'  (1)

	';'  shift 93
	.  error


state 58
	conjunto_sentencia_ejecutable : conjunto_sentencia_ejecutable sentencia_ejecutable .  (37)

	.  reduce 37


state 59
	parametro : '(' . tipo ID ')'  (23)
	parametro : '(' . ID ')'  (25)
	parametro : '(' . tipo ')'  (26)
	parametro : '(' . ')'  (27)
	parametro : '(' . tipo ID  (28)

	ID  shift 94
	INT  shift 6
	SINGLE  shift 7
	')'  shift 95
	.  error

	tipo  goto 96


state 60
	parametro : tipo . ID ')'  (24)

	ID  shift 97
	.  error


state 61
	declaracionFuncion : tipo FUNC ID parametro . bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (15)
	declaracionFuncion : tipo FUNC ID parametro . bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (16)

	ID  shift 5
	INT  shift 6
	SINGLE  shift 7
	TYPEDEF  shift 8
	.  error

	bloque_sentencias_declarativas  goto 98
	sentencia_declarativa  goto 10
	declaracionDatos  goto 11
	declaracionNuevoTipo  goto 12
	declaracionFuncion  goto 13
	tipo  goto 14


state 62
	encabezado_funcion_typedef : tipo FUNC . '(' tipo ')'  (14)

	'('  shift 99
	.  error


state 63
	declaracionNuevoTipo : TYPEDEF ID '=' encabezado_funcion_typedef ';' .  (13)

	.  reduce 13


state 64
	invocacion_funcion : ID '(' . factor ')' ';'  (42)

	ID  shift 100
	CTE  shift 41
	'-'  shift 44
	.  error

	factor  goto 101


state 65
	asignacion : ID ":=" ';' .  (45)

	.  reduce 45


state 66
	asignacion : ID ":=" expresioncompuesta . ';'  (43)

	';'  shift 102
	.  error


state 67
	expresioncompuesta : '(' expresion . ')'  (46)
	expresioncompuesta : '(' expresion .  (49)
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)

	')'  shift 103
	'+'  shift 70
	'-'  shift 71
	';'  reduce 49


state 68
	factor : '-' CTE .  (61)

	.  reduce 61


state 69
	expresioncompuesta : expresion ')' .  (48)

	.  reduce 48


state 70
	expresion : expresion '+' . termino  (50)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 104


state 71
	expresion : expresion '-' . termino  (51)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 105


state 72
	asignacion : ID expresioncompuesta ';' .  (44)

	.  reduce 44


state 73
	termino : termino '/' . factor  (53)
	termino : termino '/' . invocacion_funcion  (56)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	invocacion_funcion  goto 106
	factor  goto 107


state 74
	termino : termino '*' . factor  (54)
	termino : termino '*' . invocacion_funcion  (57)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	invocacion_funcion  goto 108
	factor  goto 109


state 75
	bloque_sentencias_ejecutables : error . ';'  (35)

	';'  shift 110
	.  error


state 76
	bloque_sentencias_ejecutables : BEGIN . conjunto_sentencia_ejecutable END ';'  (34)

	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	REPEAT  shift 28
	.  error

	conjunto_sentencia_ejecutable  goto 111
	sentencia_ejecutable  goto 30
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 77
	clausula_seleccion_if : IF THEN bloque_sentencias_ejecutables . ENDIF ';'  (72)
	clausula_seleccion_if : IF THEN bloque_sentencias_ejecutables . ELSE bloque_sentencias_ejecutables ENDIF ';'  (73)

	ELSE  shift 112
	ENDIF  shift 113
	.  error


state 78
	bloque_sentencias_ejecutables : sentencia_ejecutable .  (33)

	.  reduce 33


state 79
	clausula_seleccion_if : IF '(' condicion . ')' THEN bloque_sentencias_ejecutables ENDIF ';'  (64)
	clausula_seleccion_if : IF '(' condicion . THEN bloque_sentencias_ejecutables ENDIF ';'  (66)
	clausula_seleccion_if : IF '(' condicion . ')' THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (67)
	clausula_seleccion_if : IF '(' condicion . THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (69)
	clausula_seleccion_if : IF '(' condicion . ')' bloque_sentencias_ejecutables ENDIF ';'  (70)
	clausula_seleccion_if : IF '(' condicion . ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (71)
	condicion : condicion . operador_logico expresion  (75)

	THEN  shift 114
	"||"  shift 80
	"&&"  shift 81
	"<>"  shift 82
	"=="  shift 83
	"<="  shift 84
	">="  shift 85
	'>'  shift 86
	'<'  shift 87
	')'  shift 115
	.  error

	operador_logico  goto 89


state 80
	operador_logico : "||" .  (76)

	.  reduce 76


state 81
	operador_logico : "&&" .  (77)

	.  reduce 77


state 82
	operador_logico : "<>" .  (78)

	.  reduce 78


state 83
	operador_logico : "==" .  (79)

	.  reduce 79


state 84
	operador_logico : "<=" .  (80)

	.  reduce 80


state 85
	operador_logico : ">=" .  (81)

	.  reduce 81


state 86
	operador_logico : '>' .  (82)

	.  reduce 82


state 87
	operador_logico : '<' .  (83)

	.  reduce 83


state 88
	clausula_seleccion_if : IF condicion ')' . THEN bloque_sentencias_ejecutables ENDIF ';'  (65)
	clausula_seleccion_if : IF condicion ')' . THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (68)

	THEN  shift 116
	.  error


state 89
	condicion : condicion operador_logico . expresion  (75)

	ID  shift 40
	CTE  shift 41
	'-'  shift 44
	.  error

	expresion  goto 117
	invocacion_funcion  goto 46
	factor  goto 47
	termino  goto 49


state 90
	mensaje_pantalla : PRINT CADENA ')' . ';'  (85)

	';'  shift 118
	.  error


state 91
	mensaje_pantalla : PRINT '(' CADENA . ')' ';'  (84)
	mensaje_pantalla : PRINT '(' CADENA . ';'  (86)

	';'  shift 119
	')'  shift 120
	.  error


state 92
	sentencia_control_repeat : REPEAT '(' ID . '=' CTE ';' condicion_repeat ';' CTE ')' BEGIN conjunto_sentencias_repeat END ';'  (87)

	'='  shift 121
	.  error


state 93
	programa : ID bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';' .  (1)

	.  reduce 1


state 94
	parametro : '(' ID . ')'  (25)

	')'  shift 122
	.  error


state 95
	parametro : '(' ')' .  (27)

	.  reduce 27


state 96
	parametro : '(' tipo . ID ')'  (23)
	parametro : '(' tipo . ')'  (26)
	parametro : '(' tipo . ID  (28)

	ID  shift 123
	')'  shift 124
	.  error


state 97
	parametro : tipo ID . ')'  (24)

	')'  shift 125
	.  error


state 98
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencia_declarativa  (4)
	declaracionFuncion : tipo FUNC ID parametro bloque_sentencias_declarativas . BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (15)
	declaracionFuncion : tipo FUNC ID parametro bloque_sentencias_declarativas . BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (16)

	ID  shift 5
	BEGIN  shift 126
	INT  shift 6
	SINGLE  shift 7
	TYPEDEF  shift 8
	.  error

	sentencia_declarativa  goto 19
	declaracionDatos  goto 11
	declaracionNuevoTipo  goto 12
	declaracionFuncion  goto 13
	tipo  goto 14


state 99
	encabezado_funcion_typedef : tipo FUNC '(' . tipo ')'  (14)

	INT  shift 6
	SINGLE  shift 7
	.  error

	tipo  goto 127


state 100
	factor : ID .  (59)

	.  reduce 59


state 101
	invocacion_funcion : ID '(' factor . ')' ';'  (42)

	')'  shift 128
	.  error


state 102
	asignacion : ID ":=" expresioncompuesta ';' .  (43)

	.  reduce 43


state 103
	expresioncompuesta : '(' expresion ')' .  (46)

	.  reduce 46


state 104
	expresion : expresion '+' termino .  (50)
	termino : termino . '/' factor  (53)
	termino : termino . '*' factor  (54)
	termino : termino . '/' invocacion_funcion  (56)
	termino : termino . '*' invocacion_funcion  (57)

	'/'  shift 73
	'*'  shift 74
	THEN  reduce 50
	"||"  reduce 50
	"&&"  reduce 50
	"<>"  reduce 50
	"=="  reduce 50
	"<="  reduce 50
	">="  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	';'  reduce 50
	','  reduce 50
	')'  reduce 50
	'+'  reduce 50
	'-'  reduce 50


state 105
	expresion : expresion '-' termino .  (51)
	termino : termino . '/' factor  (53)
	termino : termino . '*' factor  (54)
	termino : termino . '/' invocacion_funcion  (56)
	termino : termino . '*' invocacion_funcion  (57)

	'/'  shift 73
	'*'  shift 74
	THEN  reduce 51
	"||"  reduce 51
	"&&"  reduce 51
	"<>"  reduce 51
	"=="  reduce 51
	"<="  reduce 51
	">="  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	';'  reduce 51
	','  reduce 51
	')'  reduce 51
	'+'  reduce 51
	'-'  reduce 51


state 106
	termino : termino '/' invocacion_funcion .  (56)

	.  reduce 56


state 107
	termino : termino '/' factor .  (53)

	.  reduce 53


state 108
	termino : termino '*' invocacion_funcion .  (57)

	.  reduce 57


state 109
	termino : termino '*' factor .  (54)

	.  reduce 54


state 110
	bloque_sentencias_ejecutables : error ';' .  (35)

	.  reduce 35


state 111
	bloque_sentencias_ejecutables : BEGIN conjunto_sentencia_ejecutable . END ';'  (34)
	conjunto_sentencia_ejecutable : conjunto_sentencia_ejecutable . sentencia_ejecutable  (37)

	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	END  shift 129
	REPEAT  shift 28
	.  error

	sentencia_ejecutable  goto 58
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 112
	clausula_seleccion_if : IF THEN bloque_sentencias_ejecutables ELSE . bloque_sentencias_ejecutables ENDIF ';'  (73)

	error  shift 75
	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	BEGIN  shift 76
	REPEAT  shift 28
	.  error

	bloque_sentencias_ejecutables  goto 130
	sentencia_ejecutable  goto 78
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34


state 113
	clausula_seleccion_if : IF THEN bloque_sentencias_ejecutables ENDIF . ';'  (72)

	';'  shift 131
	.  error


state 114
	clausula_seleccion_if : IF '(' condicion THEN . bloque_sentencias_ejecutables ENDIF ';'  (66)
	clausula_seleccion_if : IF '(' condicion THEN . bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ';'  (69)

	error  shift 75
	ID  shift 25
	IF  shift 26
	PRINT  shift 27
	BEGIN  shift 76
	REPEAT  shift 28
	.  error

	bloque_sentencias_ejecutables  goto 132
	sentencia_ejecutable  goto 78
	asignacion  goto 31
	mensaje_pantalla  goto 32
	clausula_seleccion_if  goto 33
	sentencia_control_repeat  goto 34

